# spin-clean-plugin

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  clean.json
.github/workflows/: release.yml
clean/: Cargo.toml  clean.json  clean@0.0.1.json  toolchain.toml
clean/src/: main.rs
spin-clean/: spin-clean.json
spin-clean/src/: main.rs
src/: main.rs
