[package]
name = "clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["fs", "rt-multi-thread", "macros"] }
toml = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
subprocess = "0.2.8"
path-absolutize = "3.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10" }
